--- a/app-covid19-indonesian/src/main/res/layout/activity_main.xml
+++ b/app-covid19-indonesian/src/main/res/layout/activity_main.xml
@@ -4,15 +4,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/title_covid-19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="24dp"
+        android:text="@string/covid_19"
+        android:textColor="@android:color/black"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        android:background="@android:color/white"
+        app:fontFamily="sans-serif-condensed-medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/img_covid-19"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="120dp"
+        android:src="@drawable/covid19"
+        app:layout_constraintEnd_toEndOf="@+id/title_covid-19"
+        app:layout_constraintStart_toStartOf="@+id/title_covid-19"
+        app:layout_constraintTop_toBottomOf="@+id/title_covid-19"
+        android:contentDescription="@string/todo" />
+
+    <Button
+        android:id="@+id/btn_covid-19_indonesian"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="120dp"
+        android:text="@string/indonesian"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textIsSelectable="true"
+        android:textSize="18sp"
+        android:padding="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/img_covid-19"
+        app:layout_constraintStart_toStartOf="@+id/img_covid-19"
+        app:layout_constraintTop_toBottomOf="@+id/img_covid-19" />
+
+    <Button
+        android:id="@+id/btn_close"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:text="@string/close"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textIsSelectable="true"
+        android:textSize="18sp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/img_covid-19"
+        app:layout_constraintStart_toStartOf="@+id/img_covid-19"
+        app:layout_constraintTop_toBottomOf="@+id/btn_covid-19_indonesian" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
