--- a/app-covid19-indonesian/src/main/res/layout/activity_main.xml
+++ b/app-covid19-indonesian/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/title_covid-19"
+        android:id="@+id/title_covid_19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -23,18 +23,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/img_covid-19"
+        android:id="@+id/img_covid_19"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="120dp"
         android:src="@drawable/covid19"
-        app:layout_constraintEnd_toEndOf="@+id/title_covid-19"
-        app:layout_constraintStart_toStartOf="@+id/title_covid-19"
-        app:layout_constraintTop_toBottomOf="@+id/title_covid-19"
+        app:layout_constraintEnd_toEndOf="@+id/title_covid_19"
+        app:layout_constraintStart_toStartOf="@+id/title_covid_19"
+        app:layout_constraintTop_toBottomOf="@+id/title_covid_19"
         android:contentDescription="@string/todo" />
 
     <Button
-        android:id="@+id/btn_covid-19_indonesian"
+        android:id="@+id/btn_covid_19_indonesian"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
@@ -43,9 +43,9 @@
         android:textIsSelectable="true"
         android:textSize="18sp"
         android:padding="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/img_covid-19"
-        app:layout_constraintStart_toStartOf="@+id/img_covid-19"
-        app:layout_constraintTop_toBottomOf="@+id/img_covid-19" />
+        app:layout_constraintEnd_toEndOf="@+id/img_covid_19"
+        app:layout_constraintStart_toStartOf="@+id/img_covid_19"
+        app:layout_constraintTop_toBottomOf="@+id/img_covid_19" />
 
     <Button
         android:id="@+id/btn_close"
@@ -57,9 +57,9 @@
         android:textIsSelectable="true"
         android:textSize="18sp"
         android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="@+id/img_covid-19"
-        app:layout_constraintStart_toStartOf="@+id/img_covid-19"
-        app:layout_constraintTop_toBottomOf="@+id/btn_covid-19_indonesian" />
+        app:layout_constraintEnd_toEndOf="@+id/img_covid_19"
+        app:layout_constraintStart_toStartOf="@+id/img_covid_19"
+        app:layout_constraintTop_toBottomOf="@+id/btn_covid_19_indonesian" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
