--- a/utils/src/main/res/values/colors.xml
+++ b/utils/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="color_black_android">@android:color/black</color>
+    <color name="color_white_android">@android:color/white</color>
 </resources>
