--- a/app-covid19-indonesian/src/main/res/layout/item_covid_indonesian_data.xml
+++ b/app-covid19-indonesian/src/main/res/layout/item_covid_indonesian_data.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/border_top_bottom_left_right"
-    tools:ignore="MissingDefaultResource">
+    android:background="@drawable/border_top_bottom_left_right">
 
     <TextView
         android:id="@+id/name_provinsi"
@@ -15,6 +13,8 @@
         android:background="@drawable/border_right"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
         android:layout_weight="0.4"
         android:layout_width="0dp"
         android:layout_height="match_parent"/>
